--- a/src/layout/MvHeader/_MvHeaderStyle.scss
+++ b/src/layout/MvHeader/_MvHeaderStyle.scss
@@ -2,6 +2,7 @@
     height: 5vh;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    width: 100vw;
+    justify-content: flex-end;
+    gap: 10px;
+    padding-right: 1vw;
 }
