--- a/src/layout/MvSection/_MvSectionStyle.scss
+++ b/src/layout/MvSection/_MvSectionStyle.scss
@@ -1,9 +1,9 @@
 .MpSection {
-    width: 100%;
     display: flex;
     height: 100%;
     align-items: center;
     justify-content: space-around;
     background: rgb(2,0,36);
     background: linear-gradient(232deg, rgba(2,0,36,1) 0%, rgba(137,0,255,1) 100%);
+    padding: 5px;
 }
