--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,7 +1,6 @@
-// Views
-
 // Sections
-@import '../views/HomeView/sections/HomeViewOptionSection/HomeViewOptionSectionStyle';
+@import '../views/HomeView/sections/HomeViewOptionSection/HomeViewOptionSectionStyle'; // HmeView option section.
+@import '../views/CharacterView/sections/CharacterViewCharactersSection/_CharacterViewCharactersSectionStyle.scss'; // CharacterView characters section.
 
 // Layouts
 @import '../layout/MvHeader/MvHeaderStyle'; // Navbar styles.
@@ -9,3 +8,4 @@
 @import '../layout/MvLink/_MvLinkStyle.scss'; // Link styles.
 @import '../layout/MvSection/_MvSectionStyle.scss'; // Section styles.
 @import '../layout/MvFooter/_MvFooterStyle.scss'; // Footer styles.
+@import '../layout/MvCharacterCard/_MvCharacterCardStyle.scss'; // Character card.
