--- a/src/views/ComicDetailsView/sections/_ComicDetailsViewDetailSectionStyle.scss
+++ b/src/views/ComicDetailsView/sections/_ComicDetailsViewDetailSectionStyle.scss
@@ -42,6 +42,10 @@
 
         &__description {
             letter-spacing: 2px;
+
+            @media screen and (max-width: 600px) {
+                text-align: center;
+            }
         }
     }
 }
