--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -3,7 +3,7 @@
 @import '../views/CharacterView/sections/CharacterViewCharactersSection/_CharacterViewCharactersSectionStyle.scss'; // CharacterView characters section.
 @import '../views/CharacterDetailsView/sections/CharacterDetailViewCharacterSection/_CharacterDetailViewCharacterSectionStyle.scss'; // Character detail section.
 @import '../views/ComicView/sections/_ComicViewComicsSectionStyle.scss'; // ComicView comics section.
-@import "../views/ComicDetailsView/sections/_ComicDetailsViewDetailSectionStyle.scss"; // ComicDetailsView details section
+@import '../views/ComicDetailsView/sections/_ComicDetailsViewDetailSectionStyle.scss'; // ComicDetailsView details section
 
 // Layouts
 @import '../layout/MvHeader/MvHeaderStyle'; // Navbar layout.
@@ -16,7 +16,7 @@
 @import '../layout/MvLoading/_MvLoadingStyle.scss'; // Loading layout
 
 .noDisplay-600 {
-    @media screen and (max-width: 600px) {
-        display: none;
-    }
+  @media screen and (max-width: 600px) {
+    display: none;
+  }
 }
