add task challange + framer motion animation

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -4,6 +4,7 @@
 @import '../views/CharacterDetailsView/sections/CharacterDetailViewCharacterSection/_CharacterDetailViewCharacterSectionStyle.scss'; // Character detail section.
 @import '../views/ComicView/sections/_ComicViewComicsSectionStyle.scss'; // ComicView comics section.
 @import '../views/ComicDetailsView/sections/_ComicDetailsViewDetailSectionStyle.scss'; // ComicDetailsView details section
+@import '../views/HomeView/sections/HomeViewTaskSection/_HomeViewTaskSectionStyle.scss'; // Task challanger.
 
 // Layouts
 @import '../layout/MvHeader/MvHeaderStyle'; // Navbar layout.
