--- a/src/layout/MvMain/_MvMainStyle.scss
+++ b/src/layout/MvMain/_MvMainStyle.scss
@@ -4,4 +4,6 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(232deg, rgba(2, 0, 36, 1) 0%, rgba(137, 0, 255, 1) 100%);
 }
